data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_663.wast
;; 4. **Test Description**: Construct a test where `br_if` conditions are dynamically changed at runtime through a function call. Evaluate if every `br_if` respects the updated condition dynamically.

(assert_invalid
  (module
    (func $dynamic-condition (param i32) (result i32)
      (block $label0
        (br_if 0 (local.get 0))
        (i32.const 42)
      )
      (i32.const 0)
    )
    (func (export "test")
      (i32.eqz (call $dynamic-condition (i32.const 1)))
    )
  )
  "type mismatch"
)